mcabber (1.1.0)

 * New "VI" mode (option 'vi_mode') (Holger Weiß)
 * Fix issues in buddylist rebuild (franky)
 * Do not use g_slist_free_full() which requires glib2 2.28.0 (Frank Bergmann)
 * Use UTF-8 validation of file content when sending a message from a file
 * Documentation updates

 -- Mikael, 2017-06-04

mcabber (1.0.5)

 * Much better performances with huge rosters (Frank Zschockelt)
 * Fix issue with carbons
 * Fix small memory leak
 * contrib/vim: Support reloading filetype detection

 -- Mikael, 2017-01-29

mcabber (1.0.4)

 * Bugfix: Check the origin of roster pushes
   Cf. Gajim's CVE-2015-8688 and
   https://gultsch.de/gajim_roster_push_and_message_interception.html

 -- Mikael, 2016-11-21

mcabber (1.0.3)

 * Link with the tinfo library
 * Fix default modules directory on OpenBSD (Tim van der Molen)
 * Create history log dir if it doesn't exist (Andrey Utkin)
 * [OTR] Do not send empty subjects when using otr (franky)
 * [UI] /set does not display password values anymore (Egor Kovetskiy)
 * [MUC] Use nick to set the role
 * Misc help/documentation updates

 -- Mikael, 2016-09-18

mcabber (1.0.2)

 * Compatible with Loudmouth >=1.5.3 with SHA256 support (Frank Zschockelt)
 * Ignore the untrusted certificate warning when user sets a fingerprint
   (Frank Zschockelt)
 * Stop HTML-escaping OTR messages - only strip known tags (Frank Zschockelt)
 * Read $HOME/.mcabberrc if there is no mcabber configuration directory
 * Minor documentation updates

 -- Mikael, 2016-02-27

mcabber (1.0.1)

 * [PGP] Improved PGP-encryption support
 * [PGP] Improved support for GnuPG v2+
 * [PGP] Encrypt messages with our own PGP key and decrypt our own
   encrypted messages when Carbons are enabled
 * [PGP] New PGP options: 'gpg_path' and 'gpg_home' (Holger Weiß)
 * [PGP] Check all signatures and stop immediately if one could be verified
   (Sven Gaerner)
 * Improved Carbons support (Holger Weiß)
 * New option: 'clear_unread_on_carbon' (Holger Weiß)