@@ -4,10 +4,10 @@
 .\" Generator: DocBook XSL Stylesheets v1.78.1 <http://docbook.sf.net/>
 .\"      Date: June 2017
 .\"    Manual: \ \&
-.\"    Source: \ \& 1.1.0
+.\"    Source: \ \& 1.1.1-dev
 .\"  Language: English
 .\"
-.TH "MCABBER" "1" "May 2017" "\ \& 1\&.1\&.0" "\ \&"
+.TH "MCABBER" "1" "May 2017" "\ \& 1\&.1\&.1\-dev" "\ \&"
 .\" -----------------------------------------------------------------
 .\" * Define some portability stuff
 .\" -----------------------------------------------------------------
