@@ -2993,7 +2993,7 @@ License (GPL).</p></div>
 <div id="footnotes"><hr></div>
 <div id="footer">
 <div id="footer-text">
-Version 1.1.0<br>
+Version 1.1.1-dev<br>
 Last updated
  2017-05-11 14:20:41 CEST
 </div>
