@@ -1,7 +1,7 @@
 MCABBER(1)
 ===========
 Mikael BERTHE <mcabber@lilotux.net>
-v1.1.0, June 2017
+v1.1.1-dev, June 2017
 
 NAME
 ----
