@@ -1,3 +1,9 @@
+mcabber (1.1.1-dev)
+
+ * 
+
+ -- Mikael, ?
+
 mcabber (1.1.0)
 
  * New "VI" mode (option 'vi_mode') (Holger Weiß)
